--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
             github_token: ${{ secrets.GITHUB_TOKEN }}
             publish_dir: ./frontend  # This points to your specific folder
             publish_branch: gh-pages  # The "secret" branch for the live site 
-
+            cname: andrewdaitruong.com
             # maybe?
